add better error handling/ add payments swagger
