# routes/customers.js
@@ -16,20 +16,15 @@ customersRouter.post('/register', async (req, res) => {
         const passwordEnc = encrypt(password);
         const date = DateTime.now().toISODate();
         const checkExisting = await pool.query('SELECT user_name FROM customers WHERE user_name = $1', [user_name]);
-        if (checkExisting.rows?.length) {
-            res.json(`User name ${user_name} has already been taken`);
-            return;
-        }
         const newLogin = await pool.query('INSERT INTO customers (user_name, password, date_created, contact_id, first_name, last_name) VALUES ($1, $2, $3, null, $4, $5) RETURNING user_name, date_created, contact_id, first_name, last_name ', [user_name, passwordEnc, date, first_name, last_name]);
         res.json(newLogin.rows[0]);
-        
     } catch (err) {
-        return res.status(500).send(err);
+        next(err);
     }
 });
 
 //create new contact details for customer
-customersRouter.post('/contact/:customerId', async (req, res) => {
+customersRouter.post('/contact/data/new/:customerId', async (req, res) => {
     try {
         const { customerId } = req.params;
         const { address_line1, address_line2, town, city, county, post_code, phone, email} = req.body;
@@ -38,27 +33,22 @@ customersRouter.post('/contact/:customerId', async (req, res) => {
         await pool.query('UPDATE customers SET contact_id = $1 WHERE id = $2', [contactId, customerId]);
         res.json(newContact.rows[0]);
     } catch (err) {
-        return res.status(500).send(err);
+        next(err);
     }
 });
 
 //amend contact details for customer
-customersRouter.put('/contact/:contactId', async (req, res) => {
+customersRouter.put('/contact/data/amend/:contactId', async (req, res) => {
     try {
         const { contactId } = req.params;
         const checkId = await pool.query('SELECT * from contacts WHERE id = $1', [contactId]);
-        if (!checkId.rows?.length) {
-            res.status(404).json(`Contact ID ${contactId} does not exist`);
-            return;
-        }
         for(const property in req.body) {
             await pool.query(`UPDATE contacts SET ${property} = $1 WHERE id = $2`, [req.body[property], contactId]);
         }
         const updatedContact = await pool.query('SELECT * from contacts WHERE id = $1', [contactId]);
         res.json(updatedContact.rows[0]);
-
     } catch (err) {
-        return res.status(500).send(err);
+        next(err);
     }
 })
 
@@ -67,36 +57,24 @@ customersRouter.get('/login/:username/:password', async (req, res) => {
     try {
         const { username, password } = req.params;
         const user = await pool.query('SELECT * FROM customers WHERE user_name = $1', [username]);
-        if (!user.rows?.length) {
-            res.status(401).json('Login details are incorrect');
-            return;
-        }
         const userPassword = user.rows[0].password;
         if (decryptIsMatch(password, userPassword)) {
             res.json('You have successfully logged in')
         }
-
     } catch (err) {
-        console.error(err.message);
+        next(err);
     }
 });
 
-
-
-    
 
 //get all personal data for customer
 customersRouter.get('/data/:customerId', async (req, res) => {
     try {
         const { customerId } = req.params;
         const customerData = await pool.query('SELECT customers.id as customer_id, contacts.id as contact_id, first_name, last_name, user_name, address_line1, address_line2, town, city, county, post_code, phone, email FROM customers JOIN contacts ON customers.contact_id = contacts.id WHERE customers.id = $1', [customerId]);
-        if (!customerData.rows?.length) {
-            res.status(404).json(`Customer with ID ${customerId} does not exist`);
-            return;
-        };
         res.json(customerData.rows[0]);
     } catch (err) {
-        console.error(err.message);
+        next(err);
     }
 })
 
